Se arregla el servicio (ProfesionalPublicPageService) para actualizar info de profesional